replace all placehold

--- a/google_app_engine_dev/bags-of-design/static/template/index.html
+++ b/google_app_engine_dev/bags-of-design/static/template/index.html
@@ -63,17 +63,20 @@
                                 <ul class="media-grid">
                                     <li>
                                     <a href="#">
-                                        <img class="thumbnail" src="http://placehold.it/50x50" alt="">
+                                        <img class="thumbnail"
+                                        src="image/50x50.gif" alt="">
                                     </a>
                                     </li>
                                     <li>
                                     <a href="#">
-                                        <img class="thumbnail" src="http://placehold.it/50x50" alt="">
+                                        <img class="thumbnail"
+                                        src="image/50x50.gif" alt="">
                                     </a>
                                     </li>
                                     <li>
                                     <a href="#">
-                                        <img class="thumbnail" src="http://placehold.it/50x50" alt="">
+                                        <img class="thumbnail"
+                                        src="image/50x50.gif" alt="">
                                     </a>
                                     </li>
                                 </ul>
